--- a/src/_includes/css/posts.css
+++ b/src/_includes/css/posts.css
@@ -92,7 +92,7 @@ header.header-logo {
   gap: var(--space-2xs);
   /* margin-block-start: calc(var(--space-2xl)); */
   margin-block-start: calc(clamp(10em, 10em + 11vw, 16em));
-  padding-inline-start: var(--space-m);
+  padding-inline-start: var(--space-s-m);
 
   /* TODO: Make this shrink from 2/3rds to 5/9ths if the container shrnks too small */
   grid-template-areas: "a a a a a . . . .";
